# comfyui-AGSoft

./: AGSoftImageToLatent.py  AGSoft_Crop_Face.py  AGSoft_Draw_Mask_On_Image.py  AGSoft_Empty_Latent.py  AGSoft_Empty_Latent_Krea2.py  AGSoft_Empty_Latent_QwenImage.py  AGSoft_Image_Compare.py  AGSoft_Image_Concatenate.py  AGSoft_Image_Concatenate_From_Batch.py  AGSoft_Image_Crop.py  AGSoft_Image_Crop_Plus.py  AGSoft_Image_Mask_Resize.py  AGSoft_Image_Mask_Resize_Adv.py  AGSoft_Image_Resize_Plus.py  AGSoft_Image_Rotate.py  AGSoft_Image_Rotate_Flip.py  AGSoft_Image_Stitch.py  AGSoft_Img_Pad.py  AGSoft_Img_Pad_for_Outpainting.py  AGSoft_Img_Pad_for_Outpainting_Adv.py  AGSoft_Img_Res.py  AGSoft_Img_Res_MP.py  AGSoft_Inpaint.py  AGSoft_KSampler.py  AGSoft_LTX_Base.py  AGSoft_LastFrameExtractor.py  AGSoft_Load_Images_From_Dir.py  AGSoft_Load_Video.py  AGSoft_Loop_Base.py  AGSoft_Loop_Fix.py  AGSoft_Loop_Images.py  AGSoft_Loop_Lora_Strengths.py  AGSoft_Loop_Samplers.py  AGSoft_Loop_Texts.py  AGSoft_Mask_Fix.py  AGSoft_Math.py  AGSoft_Save_Image.py  AGSoft_Styles_csv_loader.py  AGSoft_Switch_any.py  AGSoft_Text.py  (+12 more)
.github/workflows/: publish.yml
Pytorch_Retinaface/: __init__.py
styles/: AGSoft_styles_anime_eng.csv  AGSoft_styles_anime_ru.csv  AGSoft_styles_cartoon_eng.csv  AGSoft_styles_cartoon_ru.csv  AGSoft_styles_drawing_eng.csv  AGSoft_styles_drawing_ru.csv  AGSoft_styles_ghibli_eng.csv  AGSoft_styles_ghibli_ru.csv  AGSoft_styles_painting_eng.csv  AGSoft_styles_painting_ru.csv  AGSoft_styles_photo_eng.csv  AGSoft_styles_photo_ru.csv  Krea2 Style_sorted.csv
(+15 files in other folders)
