[project]
name = "comfyui-AGSoft"
description = "Collection of nodes for ComfyUI."
version = "1.0.7"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.26.4", "opencv-python>=4.7.0.72"]

[project.urls]
Repository = "https://github.com/Art-xmaster/comfyui-AGSoft"

[tool.comfy]
PublisherId = "AGSoft"
DisplayName = "comfyui-AGSoft"
Icon = ""
